<resources>
    <string name="app_name">Oui</string>
    <string name="app_desc">welcome</string>
    <string name="language">Change Language</string>

    <string name="search">Search</string>
    <string name="btn_logout">Logout</string>

    <string name="action_settings">Settings</string>
    <string name="action_scan">Scan QR</string>

    <!--LOGIN/SIGNUP ACTIVITY STRINGS-->
    <string name="btnLogin">Login</string>
    <string name="login">Already have an account? Login</string>
    <string name="email"> Enter Email </string>
    <string name="password">Enter Password</string>
    <string name="phone">Enter Phone Number</string>
    <string name="btnSignup">Sign up</string>
    <string name="signup">Dont have an account? sign up</string>
    <string name="fname_input">Enter First Name </string>
    <string name="username">Enter a username</string>
    <string name="sname_input">Surname</string>

    <!--MENU DETAIL ACTIVITY STRINGS -->
    <string name="dishName" translatable="false">dishname</string>
    <string name="dishDesc" translatable="false">dish description</string>
    <string name="addBTN">ADD</string>
    <string name="reviewBTN">See Reviews</string>

    <!--SCAN ACTIVITY STRINGS -->
    <string name="scanbtn">Press to scan</string>
    <string name="scanDesc">Scan the QR code to see restaurant menu</string>
    <string name="menu">Menu</string>

    <!--HOME ACTIVITY STRING -->
    <string name="showNot">Nothing to show, please scan again or contact restaurant manager</string>
    <string name="title_activity_home" translatable="false">Oui</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!--ORDER HISTORY ACTIVITY STRINGS -->
    <string name="Status">Status : </string>
    <string name="state" translatable="false">status</string>
    <string name="TableNo">Table No : </string>
    <string name="tablenum" translatable="false">tablenum </string>

    <!--REVIEW ACTIVITY STRINGS -->
    <string name="user" translatable="false">USER</string>

    <!--ABOUT ACTIVITY STRINGS-->
    <string name="aboutName">Oui Restaurant is here to assist your every needs. \nWith this app you can make your order fast and efficient! \n\n\n</string>
    <string name="aboutDesc"> Scan QR code to see more about us: \n</string>

    <!--BASKET ACTIVITY STRINGS -->
    <string name="total">TOTAL: </string>
    <string name="placeOrder">Place Order</string>

    <!--ORDERS ACTIVITY TABLE COMMENT LAYOUT STRINGS -->
    <string name="enterTable">Enter table number</string>
    <string name="comments">Comments</string>
    <string name="payments">Payment methods: </string>
    <string name="paypal" translatable="false">Paypal</string>
    <string name="cash">Call waiter for cash payments</string>
    <string name="emptyBasket">Basket is empty, add products!</string>
    <string name="PaymentMeth">Please select a payment method!</string>
    <string name="orderKit">Order sent to kitchen</string>
    <string name="cancel">Cancel</string>
    <string name="payCan">Payment cancelled</string>
    <string name="payInval">Payment invalid</string>

    <string name="facebook_key">1019095521619778</string>
    <string name="facebook_login">fb1019095521619778</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="orderInfo">Please Enter Order Information</string>
    <string name="DoneBtn">Done</string>
    <string name="scanCan">Scanning Cancelled</string>
    <string name="scanSuc">Scanning Success</string>
    <string name="getWait">Getting waiter</string>
    <string name="errorOrd">Error! Please order again</string>
    <string name="interCon">Check internet connection</string>
    <string name="errorMenu">Could not get menu, please scan again</string>
    <string name="profile">Profile</string>
    <string name="orderHis">Order History</string>
    <string name="about">About</string>
    <string name="SignOut">Sign Out</string>
    <string name="loggingin">Logging in...</string>
    <string name="success">Successful</string>
    <string name="unsuccess">Unsuccessful</string>
    <string name="errorLog">Cannot login</string>
    <string name="notExist">User does not exist, please register</string>
    <string name="lang">Choose Language</string>
    <string name="addBask">Added to basket</string>
    <string name="thank">Thank You</string>
    <string name="submit">Submit</string>
    <string name="poor">Poor</string>
    <string name="notG">Not Great</string>
    <string name="Meh">Meh</string>
    <string name="great">Great</string>
    <string name="amaze">Amazing</string>
    <string name="review">Write a review</string>
    <string name="reviewDesc">Please give this a rate and comment</string>
    <string name="reviewHint">Comments here</string>
    <string name="orderDel">Order cannot be deleted</string>
    <string name="Exist">User exist, please login</string>
    <string name="passAuth">Password must be greater than 6 values</string>
    <string name="validEmail">Enter a valid email address</string>
    <string name="delProf">Delete Profile</string>
    <string name="translate">Cannot translate menu items</string>
    <string name="updatPass">Change Password</string>

</resources>
