<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/scanbtn" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/orderHis" />

    </group>

    <item android:title="Other">
        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_outline_black_24dp"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Available Restaurants" />
            <item
                android:id="@+id/nav_signout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/SignOut" />
        </menu>
    </item>
</menu>
