<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/food"
    tools:context=".activities.MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/greyOverlay"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="130sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/lucidacalligraphy"
            android:layout_marginTop="50dp"
            />

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150sp"
            android:text="@string/btnLogin"
            android:textSize="15sp"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:background="@color/colorAccent"
            android:layout_gravity="center"
            android:id="@+id/btnUserLogin"
            />
        <Button
            android:id="@+id/btnUserSignup"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginTop="20sp"
            android:background="@color/charcoal"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:text="@string/btnSignup"
            android:textColor="#fff"
            />

        <ImageButton
            android:src="@drawable/ic_language_black_24dp"
            android:id="@+id/btnLanguage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="100dp"
            android:background="@color/grey"
            android:layout_gravity="center"
            />


    </LinearLayout>


</LinearLayout>
